--- a/_posts/2014-01-30-sync-acl.md
+++ b/_posts/2014-01-30-sync-acl.md
@@ -10,14 +10,14 @@ Suppose you have already the config "home_tux" for the home directory of the
 user "tux". All you need is to enable syncing of the ACL and allow the user
 "tux" to work with the config:
 
-```
-snapper -c home_tux set-config SYNC_ACL=yes ALLOW_USERS=tux
-```
+<!-- using ``` looks ok locally but bad on github (newline after <code> -->
+
+<pre><code>snapper -c home_tux set-config SYNC_ACL=yes ALLOW_USERS=tux
+</code></pre>
 
 Snapper has now added "tux" to the ACL:
 
-```
-getfacl /home/tux/.snapshots
+<pre><code>getfacl /home/tux/.snapshots
 # file: .snapshots
 # owner: root
 # group: root
@@ -26,6 +26,6 @@ user:tux:r-x
 group::r-x
 mask::r-x
 other::---
-```
+</code></pre>
 
 This feature is available in snapper version 0.2.0.
